# Hrolog

./: CHANGELOG.md  Hrolog.cabal  README.md
.github/workflows/: haskell.yml
src/: Main.hs  Parser.hs  Program.hs  Solver.hs  Utility.hs
src/Hrolog/: Builder.hs  CLI.hs  Parser.hs  Program.hs
src/Hrolog/Builder/: Examples.hs
src/Hrolog/Solver/: Deduction.hs
src/Internal/: CLI.hs  Main.hs  Parser.hs  Program.hs
src/Internal/CLI/: Type.hs
src/Solver/: Hrolog.hs  Prolog.hs
src/Test/: CLITest.hs  GraphTest.hs  HrologTest.hs  ParseTest.hs  PrologTest.hs  UnifyTest.hs  UnionFindTest.hs
src/Test/programs/: ancestor.hrolog  facts.hrolog  firstBranchTerminates.hrolog  list.hrolog  peanoNumbers.hrolog  simpleNegation.hrolog
src/Utility/: Exception.hs  Graph.hs  PP.hs  ParseCompleter.hs  Parser.hs  Unifiers.hs  UnionFind.hs
test/: ParseTest.hs  PrologTest.hs  Test.hs
test/programs/: firstBranchTerminates.hrolog  kangxi.hrolog  simpleNumbers.hrolog
