cabal-version:      3.0
name:               Hrolog
version:            0.1.0.1
synopsis:           An implementation of Prolog-style deduction and abduction
description:        See README
license:            MIT
license-file:       LICENSE
author:             mmzk1526
maintainer:         yc4120@ic.ac.uk
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
extra-source-files:
    src/Test/programs/facts.hrolog
    src/Test/programs/firstBranchTerminates.hrolog
    src/Test/programs/simpleNumbers.hrolog


common warnings
    ghc-options: -Wall


test-suite cliTest
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    type:             exitcode-stdio-1.0
    main-is:          Test/CLITest.hs
    other-modules:
        Internal.CLI,
        Internal.CLI.Type,
        Internal.Program,
        Internal.Parser,
        Parser,
        Program,
        Solver.Prolog,
        Utility.Exception,
        Utility.Graph,
        Utility.PP,
        Utility.Parser,
        Utility.Unifiers,
        Utility.UnionFind
    build-depends:
        base,
        HUnit,
        containers >=0.6,
        directory >=1.3,
        exceptions >=0.10,
        lens >=5.2,
        megaparsec >=8,
        process >=1.6,
        transformers >=0.5,
    ghc-options: 
        -O0


test-suite graphTest
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    type:             exitcode-stdio-1.0
    main-is:          Test/GraphTest.hs
    other-modules:
        Utility.Graph
    build-depends:
        base,
        HUnit,
        containers >=0.6,
        lens >=5.2,
        transformers >=0.5,
    ghc-options: 
        -O0


test-suite parseTest
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    type:             exitcode-stdio-1.0
    main-is:          Test/ParseTest.hs
    other-modules:
        Internal.Program,
        Internal.Parser,
        Utility.PP,
        Utility.Parser
    build-depends:
        base,
        HUnit,
        containers >=0.6,
        lens >=5.2,
        megaparsec >=8,
        random,
        transformers >=0.5,
    ghc-options: 
        -O0


test-suite hrologTest
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    type:             exitcode-stdio-1.0
    main-is:          Test/HrologTest.hs
    other-modules:
        Internal.Program,
        Internal.Parser,
        Parser,
        Solver.Prolog,
        Utility.Graph,
        Utility.PP,
        Utility.Parser,
        Utility.Unifiers,
        Utility.UnionFind
    build-depends:
        base,
        HUnit,
        containers >=0.6,
        lens >=5.2,
        megaparsec >=8,
        transformers >=0.5,
    ghc-options: 
        -O0

test-suite unifyTest
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    type:             exitcode-stdio-1.0
    main-is:          Test/UnifyTest.hs
    other-modules:
        Internal.Program,
        Utility.Graph,
        Utility.PP,
        Utility.Unifiers,
        Utility.UnionFind
    build-depends:
        base,
        HUnit,
        containers >=0.6,
        lens >=5.2,
        transformers >=0.5,
    ghc-options: 
        -O0


library
    import:           warnings
    exposed-modules:
        Parser,
        Program,
        Solver.Prolog,
        Utility.Parser,
    other-modules:
        Internal.Program,
        Internal.Parser,
        Utility.Graph,
        Utility.PP,
        Utility.Unifiers,
        Utility.UnionFind
    build-depends:
        base,
        containers >=0.6,
        lens >=5.2,
        megaparsec >=8,
        transformers >=0.5
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: 
        -O3


executable Hrolog
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Internal.CLI,
        Internal.CLI.Type,
        Internal.Program,
        Internal.Parser,
        Parser,
        Program,
        Solver.Prolog,
        Utility.Exception,
        Utility.PP,
        Utility.Parser,
        Utility.Unifiers,
        Utility.UnionFind
    build-depends:
        base,
        containers >=0.6,
        directory >=1.3,
        exceptions >=0.10,
        lens >=5.2,
        megaparsec >=8,
        transformers >=0.5
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: 
        -O3
